# ai-outbound-call

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile.backend  QUICK_START_UV.md  README.md  STARTUP_GUIDE.md  UV_SETUP.md  check_uv_env.sh  demo_runner.py  docker-compose.yml  freeswitch_check.sh  init.sql  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_backend.sh
.claude/: settings.json  settings.local.json
backend/agent/: __init__.py  outbound_agent.py  worker.py
backend/api/: calls_api.py  main.py  monitor_api.py  operations_api.py  scripts_api.py  tasks_api.py  test_call_api.py  (+1 more)
db/: init.sql
docker/: Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.backend.uv  Dockerfile.freeswitch-ai  build_enhanced_freeswitch.sh  docker-compose.yml  docker-compose1.yml  entrypoint.sh  livekit.yaml
docs/: ANALYSIS_DELIVERABLES.md  BARGE_IN_TOLERANCE_SUMMARY.md  CallAgent_Barge-in_Tolerance_Analysis.md  FreeSWITCH-AI 电话机器人实现方案.md  README.md  ai_outbound_call_architecture.md  backend_analysis.md  build_instructions.md  complete_implementation_guide.md  configuration_checklist.md  connection_issues_resolution.md  deployment_guide.md  esl_connection_fix.md  example_config.xml  final_solution.md  final_verification_report.md  implementation_guide.md  mod_audio_fork.md  mod_audio_form_dev.md  quick_fix_guide.md  verification_report.md  voice_routing_solution.md  毫秒级响应挑战-基于 WebSocket 与软交换构建实时 AI 语音助手全链路优化.md
frontend/: index.html
livekit_backend/: .env.example  init.sql  pyproject.toml
livekit_backend/agent/: __init__.py  dialog_manager.py  outbound_agent.py  worker.py
livekit_backend/api/: calls_api.py  main.py  monitor_api.py  scripts_api.py  tasks_api.py
livekit_backend/core/: config.py
livekit_backend/docker/: Dockerfile.backend  docker-compose.yml  livekit.yaml  sip-config.yaml
livekit_backend/docker/kamailio/: init_kamailio_db.sh  kamailio.cfg  kamctlrc
livekit_backend/frontend/: index.html
livekit_backend/models/: call_record.py  file.py  script.py  task.py
livekit_backend/plugins/: __init__.py  aliyun_stt.py  aliyun_tts.py  qwen_llm.py
livekit_backend/scripts/: init_sip_trunk.py  migrate_add_egress_tables.py
livekit_backend/services/: call_record_detail_service.py  call_record_service.py  egress_service.py  file_service.py  minio_service.py  script_service.py  sip_service.py  task_service.py
livekit_backend/utils/: db.py
migrations/: 001_add_barge_in_config.sql
scripts/: run_tests.py
tests/: conftest.py  test_all.py  test_call_timeout.py  test_no_response_config.py  test_tolerance_time.py
(+77 files in other folders)
