[project]
name = "ai-outbound-call-new"
version = "2.0.0"
description = "AI外呼电话系统"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Web 框架
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "aiofiles==24.1.0",
    # LLM
    "anthropic>=0.40.0",
    "dashscope>=1.19.1", # 通义千问 SDK
    "openai>=1.0.0", # OpenAI兼容API
    # 数据库
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg>=0.30.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.2",
    # HTTP 客户端
    "httpx==0.27.2",
    "aiohttp==3.10.5",
    # WebSocket
    "websockets==13.0.1",
    # 音频处理 - 不在Python 3.13+环境下安装audioop-lts
    # "audioop-lts==0.2.1",
    # TTS
    "edge-tts==6.1.12",
    # 配置管理
    "python-dotenv==1.0.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    # 缓存 & 任务队列
    "redis[hiredis]==5.0.8",
    # 安全
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    # 日志与监控
    "structlog==24.4.0",
    # 工具
    "rich==13.8.1",
    "click==8.1.7",
    # 对象存储
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
ai-outbound-call = "backend.api.main:app"
ai-outbound-call-demo = "demo_runner:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.api", "backend.core", "backend.services", "backend.utils"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
